[gd_scene load_steps=71 format=2]

[ext_resource path="res://ladder.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/Enviroment/3 Objects/Ladder3.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/Enviroment/3 Objects/Ladder2.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/Enviroment/3 Objects/Ladder1.png" type="Texture" id=4]
[ext_resource path="res://Player.gd" type="Script" id=5]
[ext_resource path="res://assets/sprites/Player/Idle/4.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/Player/Idle/1.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/Player/Idle/3.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/Player/Idle/2.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/Player/Jump/6.png" type="Texture" id=10]
[ext_resource path="res://assets/sprites/Player/Run/2.png" type="Texture" id=11]
[ext_resource path="res://assets/sprites/Player/Jump/2.png" type="Texture" id=12]
[ext_resource path="res://assets/sprites/Player/Jump/3.png" type="Texture" id=13]
[ext_resource path="res://assets/sprites/Player/Run/6.png" type="Texture" id=14]
[ext_resource path="res://assets/sprites/Player/Punch/3.png" type="Texture" id=15]
[ext_resource path="res://assets/sprites/Player/Run/5.png" type="Texture" id=16]
[ext_resource path="res://assets/sprites/Player/Jump/4.png" type="Texture" id=17]
[ext_resource path="res://assets/sprites/Player/Jump/5.png" type="Texture" id=18]
[ext_resource path="res://assets/sprites/Player/Run/1.png" type="Texture" id=19]
[ext_resource path="res://assets/sprites/Player/Jump/1.png" type="Texture" id=20]
[ext_resource path="res://assets/sprites/Player/Run/4.png" type="Texture" id=21]
[ext_resource path="res://assets/sprites/Player/Run/3.png" type="Texture" id=22]
[ext_resource path="res://assets/sprites/Light/Chest light .png" type="Texture" id=23]
[ext_resource path="res://assets/sprites/Player/Punch/8.png" type="Texture" id=24]
[ext_resource path="res://assets/sprites/Player/Death/1.png" type="Texture" id=25]
[ext_resource path="res://assets/sprites/Player/Death/5.png" type="Texture" id=26]
[ext_resource path="res://assets/sprites/Player/Death/3.png" type="Texture" id=27]
[ext_resource path="res://assets/sprites/Player/Death/4.png" type="Texture" id=28]
[ext_resource path="res://assets/sprites/Player/Punch/1.png" type="Texture" id=29]
[ext_resource path="res://assets/sprites/Player/Shoot/5.png" type="Texture" id=30]
[ext_resource path="res://assets/sprites/Player/Shoot/1.png" type="Texture" id=31]
[ext_resource path="res://assets/sprites/Player/Intract/3.png" type="Texture" id=32]
[ext_resource path="res://assets/sprites/Player/Punch/5.png" type="Texture" id=33]
[ext_resource path="res://assets/sprites/Player/Intract/2.png" type="Texture" id=34]
[ext_resource path="res://assets/sprites/Player/Climb/Cyborg_climb_3.png" type="Texture" id=35]
[ext_resource path="res://assets/sprites/Light/Death Chest light .png" type="Texture" id=36]
[ext_resource path="res://assets/sprites/Player/Shoot/2.png" type="Texture" id=37]
[ext_resource path="res://assets/sprites/Player/Intract/5.png" type="Texture" id=38]
[ext_resource path="res://assets/sprites/Player/Death/6.png" type="Texture" id=39]
[ext_resource path="res://assets/sprites/Player/Intract/6.png" type="Texture" id=40]
[ext_resource path="res://assets/sprites/Player/Climb/Cyborg_climb_4.png" type="Texture" id=41]
[ext_resource path="res://assets/sprites/Player/Climb/Cyborg_climb_6.png" type="Texture" id=42]
[ext_resource path="res://assets/sprites/Player/Shoot/3.png" type="Texture" id=43]
[ext_resource path="res://assets/sprites/Player/Punch/7.png" type="Texture" id=44]
[ext_resource path="res://assets/sprites/Player/Climb/Cyborg_climb_5.png" type="Texture" id=45]
[ext_resource path="res://assets/sprites/Player/Hurt/1.png" type="Texture" id=46]
[ext_resource path="res://assets/sprites/Player/Death/2.png" type="Texture" id=47]
[ext_resource path="res://assets/sprites/Player/Intract/1.png" type="Texture" id=48]
[ext_resource path="res://assets/sprites/Player/Climb/Cyborg_climb_2.png" type="Texture" id=49]
[ext_resource path="res://assets/sprites/Player/Shoot/4.png" type="Texture" id=50]
[ext_resource path="res://assets/sprites/Player/Intract/4.png" type="Texture" id=51]
[ext_resource path="res://assets/sprites/Player/Punch/6.png" type="Texture" id=52]
[ext_resource path="res://assets/sprites/Player/Shoot/8.png" type="Texture" id=53]
[ext_resource path="res://assets/sprites/Player/Shoot/6.png" type="Texture" id=54]
[ext_resource path="res://assets/sprites/Player/Punch/4.png" type="Texture" id=55]
[ext_resource path="res://assets/sprites/Player/Climb/Cyborg_climb_1.png" type="Texture" id=56]
[ext_resource path="res://assets/sprites/Player/Punch/2.png" type="Texture" id=57]
[ext_resource path="res://icon.png" type="Texture" id=58]
[ext_resource path="res://assets/sprites/Player/Climb/Cyborg_climb_d_3.png" type="Texture" id=59]
[ext_resource path="res://assets/sprites/Player/Climb/Cyborg_climb_d_1.png" type="Texture" id=60]
[ext_resource path="res://assets/sprites/Player/Climb/Cyborg_climb_d_2.png" type="Texture" id=61]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12, 36 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 48 ), ExtResource( 34 ), ExtResource( 32 ), ExtResource( 51 ), ExtResource( 38 ), ExtResource( 40 ) ],
"loop": false,
"name": "Intract",
"speed": 5.0
}, {
"frames": [ ExtResource( 29 ), ExtResource( 57 ), ExtResource( 15 ), ExtResource( 55 ), ExtResource( 33 ), ExtResource( 52 ), ExtResource( 44 ), ExtResource( 24 ) ],
"loop": false,
"name": "Punch",
"speed": 8.0
}, {
"frames": [ ExtResource( 56 ) ],
"loop": false,
"name": "Climb",
"speed": 5.0
}, {
"frames": [ ExtResource( 31 ), ExtResource( 37 ), ExtResource( 43 ), ExtResource( 50 ), ExtResource( 30 ), ExtResource( 54 ), ExtResource( 53 ), ExtResource( 31 ) ],
"loop": false,
"name": "Shoot",
"speed": 8.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 10 ) ],
"loop": false,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 11 ), ExtResource( 22 ), ExtResource( 21 ), ExtResource( 16 ), ExtResource( 14 ) ],
"loop": true,
"name": "Run",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 9 ), ExtResource( 8 ), ExtResource( 6 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 25 ), ExtResource( 47 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 26 ), ExtResource( 39 ) ],
"loop": false,
"name": "Death",
"speed": 5.0
}, {
"frames": [ ExtResource( 46 ) ],
"loop": false,
"name": "Hurt",
"speed": 5.0
}, {
"frames": [ ExtResource( 60 ), ExtResource( 61 ), ExtResource( 59 ) ],
"loop": false,
"name": "Climb_down",
"speed": 10.0
}, {
"frames": [ ExtResource( 56 ), ExtResource( 49 ), ExtResource( 35 ), ExtResource( 41 ), ExtResource( 45 ), ExtResource( 42 ) ],
"loop": true,
"name": "Climb_up",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 8, 15.8889 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 16, 4 )

[sub_resource type="Animation" id=7]
resource_name = "DeathL"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite/Light2DDeath:enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.00933015, 0.0373206, 0.1, 0.2, 0.5, 0.6, 0.7, 0.9, 1, 1.2, 1.5, 1.7, 1.9, 2, 2.2, 2.4, 2.5, 2.6, 2.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false ]
}

[sub_resource type="Animation" id=8]
resource_name = "Punch"
step = 0.125
tracks/0/type = "value"
tracks/0/path = NodePath("AttackArea/CollisionShape2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1 ), Vector2( 1e-05, 1 ), Vector2( 0.1, 1 ), Vector2( 0.1, 1 ), Vector2( 1, 1 ), Vector2( 0.1, 1 ), Vector2( 0.55, 1 ), Vector2( 1, 1 ), Vector2( 1e-05, 1 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AttackArea/CollisionShape2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite/Light2DDeath:enabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ ExtResource( 48 ), ExtResource( 34 ), ExtResource( 32 ), ExtResource( 51 ), ExtResource( 38 ), ExtResource( 40 ) ],
"loop": false,
"name": "Intract",
"speed": 5.0
}, {
"frames": [ ExtResource( 29 ), ExtResource( 57 ), ExtResource( 15 ), ExtResource( 55 ), ExtResource( 33 ), ExtResource( 52 ), ExtResource( 44 ), ExtResource( 24 ) ],
"loop": false,
"name": "Punch",
"speed": 8.0
}, {
"frames": [ ExtResource( 56 ), ExtResource( 49 ), ExtResource( 35 ), ExtResource( 41 ), ExtResource( 45 ), ExtResource( 42 ) ],
"loop": true,
"name": "Climb",
"speed": 5.0
}, {
"frames": [ ExtResource( 31 ), ExtResource( 37 ), ExtResource( 43 ), ExtResource( 50 ), ExtResource( 30 ), ExtResource( 54 ), ExtResource( 53 ), ExtResource( 31 ) ],
"loop": false,
"name": "Shoot",
"speed": 8.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 10 ) ],
"loop": false,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 11 ), ExtResource( 22 ), ExtResource( 21 ), ExtResource( 16 ), ExtResource( 14 ) ],
"loop": true,
"name": "Run",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 9 ), ExtResource( 8 ), ExtResource( 6 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 25 ), ExtResource( 47 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 26 ), ExtResource( 39 ) ],
"loop": false,
"name": "Death",
"speed": 5.0
}, {
"frames": [ ExtResource( 46 ) ],
"loop": false,
"name": "Hurt",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 64, 8 )

[node name="Ladder" type="Node2D"]

[node name="Ladder" type="Area2D" parent="."]
position = Vector2( 0, -40 )
collision_layer = 0
script = ExtResource( 1 )

[node name="ladder_t" type="Sprite" parent="Ladder"]
position = Vector2( 0, 48 )
texture = ExtResource( 2 )

[node name="ladder_m" type="Sprite" parent="Ladder"]
position = Vector2( 0, 80 )
texture = ExtResource( 3 )

[node name="ladder_b" type="Sprite" parent="Ladder"]
position = Vector2( 0, 112 )
texture = ExtResource( 4 )

[node name="ladder" type="CollisionShape2D" parent="Ladder"]
visible = false
position = Vector2( -4, 84 )
shape = SubResource( 1 )

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 48, 32 )
collision_mask = 32750
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Player"]
frames = SubResource( 4 )
animation = "Climb"
playing = true

[node name="Light2DR" type="Light2D" parent="Player/AnimatedSprite"]
position = Vector2( 15, -5.99997 )
rotation = -8.74228e-08
texture = ExtResource( 23 )
color = Color( 0.24128, 0.636601, 0.898438, 1 )
shadow_enabled = true

[node name="Light2DL" type="Light2D" parent="Player/AnimatedSprite"]
position = Vector2( -15, -5.99997 )
rotation = -8.74228e-08
scale = Vector2( -1, 1 )
enabled = false
texture = ExtResource( 23 )
color = Color( 0.24128, 0.636601, 0.898438, 1 )
shadow_enabled = true

[node name="Light2DDeath" type="Light2D" parent="Player/AnimatedSprite"]
position = Vector2( 0, 16 )
scale = Vector2( 0.475, 0.4375 )
texture = ExtResource( 36 )
color = Color( 0.94902, 0.152941, 0.917647, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
visible = false
position = Vector2( 0, 2.70001 )
scale = Vector2( 1, 0.9 )
shape = SubResource( 5 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
zoom = Vector2( 0.55, 0.55 )
limit_left = -152
limit_right = 1176
drag_margin_h_enabled = true
drag_margin_left = 0.15
drag_margin_right = 0.15
editor_draw_limits = true

[node name="AttackArea" type="Area2D" parent="Player"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/AttackArea"]
visible = false
position = Vector2( 0, -4 )
scale = Vector2( 1e-05, 1 )
shape = SubResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player"]
anims/DeathL = SubResource( 7 )
anims/Punch = SubResource( 8 )
anims/RESET = SubResource( 9 )

[node name="StunTimer" type="Timer" parent="Player"]

[node name="Tween" type="Tween" parent="Player"]

[node name="AnimatedSprite2" type="AnimatedSprite" parent="Player"]
visible = false
frames = SubResource( 11 )
animation = "Idle"
frame = 2
playing = true

[node name="Light2DR" type="Light2D" parent="Player/AnimatedSprite2"]
position = Vector2( 15, -5.99997 )
rotation = -8.74228e-08
texture = ExtResource( 23 )
color = Color( 0.24128, 0.636601, 0.898438, 1 )
shadow_enabled = true

[node name="Light2DL" type="Light2D" parent="Player/AnimatedSprite2"]
position = Vector2( -15, -5.99997 )
rotation = -8.74228e-08
scale = Vector2( -1, 1 )
enabled = false
texture = ExtResource( 23 )
color = Color( 0.24128, 0.636601, 0.898438, 1 )
shadow_enabled = true

[node name="Light2DDeath" type="Light2D" parent="Player/AnimatedSprite2"]
position = Vector2( 0, 16 )
scale = Vector2( 0.475, 0.4375 )
texture = ExtResource( 36 )
color = Color( 0.94902, 0.152941, 0.917647, 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( 576, 544 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -576, -456 )
shape = SubResource( 10 )

[node name="Icon" type="Sprite" parent="StaticBody2D"]
position = Vector2( -576, -456 )
scale = Vector2( 2, 0.25 )
texture = ExtResource( 58 )

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
position = Vector2( 672, 424 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2( -576, -456 )
shape = SubResource( 10 )

[node name="Icon" type="Sprite" parent="StaticBody2D2"]
position = Vector2( -576, -456 )
scale = Vector2( 2, 0.25 )
texture = ExtResource( 58 )

[connection signal="body_entered" from="Ladder" to="Ladder" method="_on_Ladder_body_entered"]
[connection signal="body_exited" from="Ladder" to="Ladder" method="_on_Ladder_body_exited"]
[connection signal="animation_finished" from="Player/AnimatedSprite" to="Player" method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="Player/AttackArea" to="Player" method="_on_AttackArea_body_entered"]
